[package]
name = "pgmt"
version = "0.4.0"
edition = "2024"
description = "PostgreSQL migration tool that keeps your schema files as the source of truth"
license = "MIT"
repository = "https://github.com/gdpotter/pgmt"
homepage = "https://pgmt.dev"
documentation = "https://pgmt.dev/docs/"
readme = "README.md"
keywords = ["postgresql", "migrations", "database", "schema", "sql"]
categories = ["command-line-utilities", "database", "development-tools"]
include = ["/src/", "/.sqlx/", "/LICENSE", "/README.md"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "tls-rustls"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
dialoguer = "0.11.0"
console = "0.15.11"
petgraph = "0.8.1"
itertools = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
glob = "0.3"
uuid = { version = "1.19.0", features = ["v4"] }
bollard = "0.19"
once_cell = "1.19"
futures-util = "0.3"
notify = "6.1"
similar = "2.3"

[dev-dependencies]
once_cell = "1.21.3"
tempfile = "3.24"
anyhow = "1.0"
assert_cmd = "2.1.2"
predicates = "3.0"
chrono = "0.4.43"
rstest = "0.26.1"
insta = "1.46.1"

# Interactive CLI testing - better support on Unix-like systems
[target.'cfg(not(windows))'.dev-dependencies]
expectrl = "0.7"
